==========
Change Log
==========

Version 3.0.0b1
---------------
- Fixed traceback trimming, and added ParserElement.verbose_traceback
  save/restore to reset_pyparsing_context().


Version 3.0.0a2 - June, 2020
----------------------------
- Summary of changes for 3.0.0 can be found in "What's New in Pyparsing 3.0.0"
  documentation.

- API CHANGE
  Changed result returned when parsing using countedArray,
  the array items are no longer returned in a doubly-nested
  list.

- An excellent new enhancement is the new railroad diagram
  generator for documenting pyparsing parsers:

        import pyparsing as pp
        from pyparsing.diagram import to_railroad, railroad_to_html
        from pathlib import Path

        # define a simple grammar for parsing street addresses such
        # as "123 Main Street"
        #     number word...
        number = pp.Word(pp.nums).setName("number")
        name = pp.Word(pp.alphas).setName("word")[1, ...]

        parser = number("house_number") + name("street")
        parser.setName("street address")

        # construct railroad track diagram for this parser and
        # save as HTML
        rr = to_railroad(parser)
        Path('parser_rr_diag.html').write_text(railroad_to_html(rr))

  Very nice work provided by Michael Milton, thanks a ton!

- Enhanced default strings created for Word expressions, now showing
  string ranges if possible. `Word(alphas)` would formerly
  print as `W:(ABCD...)`, now prints as `W:(A-Za-z)`.

- Added ignoreWhitespace(recurse:bool = True) and added a
  recurse argument to leaveWhitespace, both added to provide finer
  control over pyparsing's whitespace skipping. Also contributed
  by Michael Milton.

- The unicode range definitions for the various languages were
  recalculated by interrogating the unicodedata module by character
  name, selecting characters that contained that language in their
  Unicode name. (Issue #227)

  Also, pyparsing_unicode.Korean was renamed to Hangul (Korean