@@ -7,6 +7,16 @@ Version 3.0.0b1
 - Fixed traceback trimming, and added ParserElement.verbose_traceback
   save/restore to reset_pyparsing_context().
 
+- Default string for Word expressions now also include indications of
+  min and max length specification, if applicable, similar to regex length
+  specifications:
+
+        Word(nums)               -> "W:(0-9)"
+        Word(nums, exact=3)      -> "W:(0-9){3}"
+        Word(nums, min=2)        -> "W:(0-9){2,...}"
+        Word(nums, max=3)        -> "W:(0-9){1,3}"
+        Word(nums, min=2, max=3) -> "W:(0-9){2,3}"
+
 
 Version 3.0.0a2 - June, 2020
 ----------------------------
